--- a/PSPCSProject/PSPCS/templates/dashboard.html
+++ b/PSPCSProject/PSPCS/templates/dashboard.html
@@ -28,7 +28,7 @@
       <div class="col-md-6">
         <!-- Product Card Example 1 (Left) -->
         <div class="card">
-          <img src="{% static 'images/dress.png' %}" class="card-img-top square-img" alt="Clothes Product">
+          <img src="{% static 'images/dress.jpg' %}" class="card-img-top square-img" alt="Clothes Product"style="width: 100%; height: 305px;">
           <div class="card-body">
             <h5 class="card-title">Cloth Products</h5>
             <p class="card-text">Description of Product 1.</p>
@@ -58,13 +58,6 @@
           </div>
         </div>
       </div>
-
-    </div>
-  </div>
-</section>
-
-
-      <!-- Add more product cards or ad blocks as needed -->
     </div>
   </div>
 </section>
