--- a/PSPCSProject/PSPCS/templates/productsnavbar.html
+++ b/PSPCSProject/PSPCS/templates/productsnavbar.html
@@ -18,7 +18,7 @@
             <!-- User Profile Section -->
             <div class="user-profile-section" data-button-text="User Profile">
                 <img src="{% static 'images/user.svg' %}" alt="User Profile" onclick="showUserProfilePopup()">
-                <button class="btn btn-danger logout-btn">Logout</button>
+<!--                <button class="btn btn-danger logout-btn">Logout</button>-->
             </div>
 
             <!-- User Profile Popup -->
