--- a/PSPCSProject/PSPCS/templates/login.html
+++ b/PSPCSProject/PSPCS/templates/login.html
@@ -1,5 +1,3 @@
-<!-- login.html -->
-
 {% load static %}
 <html lang="en">
 <head>
@@ -8,6 +6,13 @@
 </head>
 {% block body %}
 <body style="position: relative; overflow: hidden; margin: 0;">
+    {% if messages %}
+  {% for message in messages %}
+   {% if message.tags %}  <script>alert("{{ message }}")</script> {% endif %}
+
+  {% endfor %}
+
+{% endif %}
  <video autoplay muted loop id="video-background" style="position: fixed; right: 0; bottom: 0; min-width: 100%; min-height: 100%; width: auto; height: auto; z-index: -1000;">
     <source src="{% static 'images/867076067.mp4' %}" type="video/mp4">
     Your browser does not support the video tag.
@@ -21,12 +26,12 @@
       </div>
       <h2 class="text-center mb-4">Login</h2>
 
-      <form method="post" action="{% url 'login' %}">
+      <form method="post" action="{% url 'login1' %}">
         {% csrf_token %}
 
         <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" name="email" id="email" placeholder="Enter email" required>
+          <label for="username" class="form-label">username</label>
+          <input type="text" class="form-control" name="username" id="username" placeholder="Enter username" required>
         </div>
 
         <div class="mb-3">
