--- a/PSPCSProject/PSPCS/templates/register.html
+++ b/PSPCSProject/PSPCS/templates/register.html
@@ -5,6 +5,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 {% block body %}
+ {% if messages %}
+  {% for message in messages %}
+   {% if message.tags %}  <script>alert("{{ message }}")</script> {% endif %}
+
+  {% endfor %}
+
+{% endif %}
 <body style="background-image:url({% static 'images/login-back.jpeg' %});background-size: cover;
       background-repeat: no-repeat;">
   <div class="container d-flex justify-content-center align-items-center min-vh-100  register-container" >
@@ -17,12 +24,12 @@
       </div>
 
       <h4 class="text-center">Register</h4>
-      <form method="post" action="{% url 'register' %}">
+      <form method="post" action="{% url 'register1' %}">
         {% csrf_token %}
 
         <div class="mb-3">
-          <label for="name">Name:</label>
-          <input type="text" class="form-control" name="name" id="name" placeholder="Enter name" required>
+          <label for="username">UserName:</label>
+          <input type="text" class="form-control" name="username" id="username" placeholder="Enter username" required>
         </div>
 
         <div class="mb-3">
@@ -41,8 +48,8 @@
         </div>
 
         <div class="mb-3">
-          <label for="confirmPassword">Confirm Password:</label>
-          <input type="password" class="form-control" name="confirmPassword" id="confirmPassword" placeholder="Confirm password" required>
+          <label for="password1">Confirm Password:</label>
+          <input type="password" class="form-control" name="password1" id="password1" placeholder="Confirm password" required>
         </div>
 
         <button type="submit" class="btn btn-primary register-button d-flex justify-content-center mx-auto">Register</button>
