--- a/PSPCSProject/PSPCS/templates/navbar.html
+++ b/PSPCSProject/PSPCS/templates/navbar.html
@@ -29,6 +29,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Price Comparison</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Vamsi</a>
+                </li>
             </ul>
 
             <div class="search-icon" onclick="toggleSearch()">
