--- a/PSPCSProject/PSPCS/templates/productnavbar.html
+++ b/PSPCSProject/PSPCS/templates/productnavbar.html
@@ -1,4 +1,12 @@
-<!-- productnavbar.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product Navbar</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/productsnavbar.css">
+</head>
+<body><!-- productnavbar.html -->
 <div class="left-section">
     <a href="/dashboard/" data-button-text="Home"><img src="/static/images/Home.svg" alt="Home"></a>
     <a href="/products/" data-button-text="Products"><img src="/static/images/Products.svg" alt="Products"></a>
@@ -14,3 +22,5 @@
     <!-- User Profile Popup -->
     <div id="userProfilePopup" class="user-profile-popup"></div>
 </div>
+</body>
+
