--- a/PSPCSProject/PSPCS/templates/navbar.html
+++ b/PSPCSProject/PSPCS/templates/navbar.html
@@ -4,20 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}E-commerce System{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
+    <link href="{% static 'css/navbar.css' %}" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar fixed-top">
     <div class="container-fluid">
         <div class="d-flex justify-content-between w-100">
             <a class="navbar-brand" href="#">
-                <img src="{% static 'images/logo.svg' %}" alt="Logo" height="30">
+                <img alt="Logo" height="30" src="{% static 'images/logo.svg' %}">
             </a>
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'dashboard' %}">Home</a>
+                    <a aria-current="page" class="nav-link active" href="{% url 'dashboard' %}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'products' %}">Products</a>
@@ -32,42 +33,46 @@
             </ul>
 
             <div class="search-icon" onclick="toggleSearch()">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <svg class="bi bi-search" fill="currentColor" height="16" viewBox="0 0 16 16" width="16"
+                     xmlns="http://www.w3.org/2000/svg">
                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                 </svg>
             </div>
 
             <div class="search-form">
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search for products" aria-label="Search">
+                    <input aria-label="Search" class="form-control me-2" placeholder="Search for products"
+                           type="search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
 
             <div class="dropdown">
-                <button class="btn dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="{% static 'images/user.svg' %}" alt="User Profile" height="30">
+                <button aria-expanded="false" class="btn dropdown-toggle" data-bs-toggle="dropdown" id="userDropdown"
+                        type="button">
+                    <img alt="User Profile" height="30" src="{% static 'images/user.svg' %}">
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="userDropdown">
+                <ul aria-labelledby="userDropdown" class="dropdown-menu">
+                    {% if request.user.is_authenticated %}
                     <li class="user-info">
-                        {% if user.is_authenticated %}
-                        <li class="nav-item">
-                           <span class="nav-link">Welccome,{{ user.username}}</span>
-                        </li>
                     <li class="nav-item">
-                       <a class="nav-link" href="{% url 'logout' %}">Log out</a>
+                        <span class="nav-link">Welcome, {{ request.user.username }}</span>
+                    </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Log out</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'login' %}">Login </a>
+                        <a class="nav-link" href="{% url 'login' %}">Login </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'register' %} ">Signup </a>
                     </li>
-                   {% endif %}
-                    </li>
+                    {% endif %}
                 </ul>
             </div>
+
         </div>
     </div>
 </nav>
