--- a/PSPCSProject/PSPCS/static/css/homepage.css
+++ b/PSPCSProject/PSPCS/static/css/homepage.css
@@ -10,7 +10,7 @@ body{
   height: 100vh;;
   width: 100%;
   display: flex;
-  background-image: linear-gradient( 135deg, #B731D3  10%, #B42FD6 100%);
+  background-image: linear-gradient( 135deg,  #a5b6ff  10%,  #a5b6ff 100%);
 }
 ::selection{
   color: #f2f2f2;
@@ -28,12 +28,12 @@ body::after{
 body::before{
   clip-path: circle(30% at left 20%);
   opacity: 0.4;
-  background-image: linear-gradient( 135deg, #F6416C 10%, #ff9a9e 100%);
+  background-image: linear-gradient( 135deg, #ffffff 10%,  #ffffff 100%);
 }
 body::after{
   opacity: 0.4;
   clip-path: circle(25% at right 80%);
-  background-image: linear-gradient( 135deg, #F6416C 10%, #ff9a9e 100%);
+  background-image: linear-gradient( 135deg, #ffffff 10%, #ffffff 100%);
 }
 header{
   height: 85vh;
