--- a/PSPCSProject/PSPCS/static/css/homepage.css
+++ b/PSPCSProject/PSPCS/static/css/homepage.css
@@ -81,7 +81,7 @@ header .navbar{
 }
  header .text-content{
    width: 40%;
-   margin: 100px 0 0 50px ;
+   margin: 100px 0 0 50px ;q
  }
 .text-content h2{
   font-size: 27px;
