--- a/PSPCSProject/PSPCS/templates/dashboard.html
+++ b/PSPCSProject/PSPCS/templates/dashboard.html
@@ -44,7 +44,7 @@
           <div class="card-body">
             <h5 class="card-title">Phone Products</h5>
             <p class="card-text">Description of Product 2.</p>
-            <a href="#" class="btn btn-primary">View Details</a>
+            <a href="{% url 'products' %}" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
