--- a/PSPCSProject/PSPCS/templates/login.html
+++ b/PSPCSProject/PSPCS/templates/login.html
@@ -38,7 +38,6 @@
           <label for="password" class="form-label">Password</label>
           <input type="password" class="form-control" name="password" id="password" placeholder="Enter password" required>
         </div>
-
         <button type="submit" class="btn btn-primary register-button d-flex justify-content-center mx-auto">Login</button>
 
         <div class="text-danger mt-2" id="error">
@@ -47,6 +46,9 @@
 
         <div class="mt-3">
           Don't have an account? <a href="/register">Register</a>
+        </div>
+          <div class="mt-3">
+           If Your Admin     <a href="/admin">Admin Login</a>
         </div>
       </form>
     </div>
