--- a/PSPCSProject/PSPCS/static/css/dashboard.css
+++ b/PSPCSProject/PSPCS/static/css/dashboard.css
@@ -10,6 +10,7 @@
       border: 1px solid rgba(255,0,0,0.25);
       color: #ffffff;
       padding: 50px 0;
+      margin-top:5px;
     }
 
     .hero h1 {
@@ -31,3 +32,13 @@
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
+
+.welcome {
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    color: #333;
+}
+
+.container {
+    text-align: right;
+}
