--- a/PSPCSProject/PSPCS/templates/navbar.html
+++ b/PSPCSProject/PSPCS/templates/navbar.html
@@ -7,6 +7,7 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
     <link href="{% static 'css/navbar.css' %}" rel="stylesheet">
+    <script src="{% static 'js/navbar.js' %}"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar fixed-top">
@@ -32,19 +33,12 @@
                 </li>
             </ul>
 
-            <div class="search-icon" onclick="toggleSearch()">
-                <svg class="bi bi-search" fill="currentColor" height="16" viewBox="0 0 16 16" width="16"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-                </svg>
-            </div>
-
             <form action="{% url 'search_products' %}" class="d-flex" method="get" role="search">
-               {% csrf_token %}
-    <input aria-label="Search" class="form-control me-2" name="searchTerm" placeholder="Search for products" type="search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
-</form>
-
+                {% csrf_token %}
+                <input aria-label="Search" class="form-control me-2" name="searchTerm" placeholder="Search for products"
+                       type="search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
 
 
         </div>
@@ -75,7 +69,6 @@
             </ul>
         </div>
 
-    </div>
     </div>
 </nav>
 
