--- a/PSPCSProject/PSPCS/templates/product_description.html
+++ b/PSPCSProject/PSPCS/templates/product_description.html
@@ -1,35 +1,42 @@
+{% block body %}
 {% include 'productnavbar.html' %}
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>{{ product.name }}</title>
-    <link href="/static/css/product_description.css" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/product_description.css' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div class="container">
-        <div class="product-image">
-            <img src="{{ product.image.url }}" alt="{{ product.name }}">
-        </div>
-        <div class="product-details">
-            <h1>{{ product.name }}</h1>
-            <p>{{ product.price }}</p>
-            <p>{{ formatted_description | safe }}</p> <!-- Use the formatted_description variable with safe filter -->
-            <p><a href="{{ product.link }}" target="_blank">Product Link</a></p>
-        </div>
+<div class="container">
+    <div class="product-image">
+        <img alt="{{ product.name }}" src="{{ product.image.url }}">
     </div>
+    <div class="product-details">
+        <h1>Product Name: {{ product.name }}</h1>
+        <p>{{ product.price }}</p>
+        <p>{{ product.description | safe }}</p>
+        <p><a href="{{ product.link }}" target="_blank">Product Link</a></p>
+        <form action="{% url 'add_to_cart' product.id %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Add to Cart</button>
+        </form>
+    </div>
+</div>
 
-    {% if last_viewed_products %}
-    <div class="prev-products">
-        <h2>Previously Viewed Products</h2>
-        {% for prev_product in last_viewed_products %}
-            <div class="prev-product">
-                <h3>{{ prev_product.name }}</h3>
-                <p>{{ prev_product.price }}</p>
-                <!-- Add more details if needed -->
-            </div>
-        {% endfor %}
+{% if last_viewed_products %}
+<div class="prev-products">
+    <h2>Previously Viewed Products</h2>
+    {% for prev_product in last_viewed_products %}
+    <div class="prev-product">
+        <h3>{{ prev_product.name }}</h3>
+        <p>{{ prev_product.price }}</p>
+        <!-- Add more details if needed -->
     </div>
-    {% endif %}
+    {% endfor %}
+</div>
+{% endif %}
 </body>
 </html>
+{% endblock %}
