--- a/PSPCSProject/PSPCS/templates/productnavbar.html
+++ b/PSPCSProject/PSPCS/templates/productnavbar.html
@@ -12,7 +12,10 @@
     <a href="/products/" data-button-text="Products"><img src="/static/images/Products.svg" alt="Products"></a>
     <a href="/categories/" data-button-text="Categories"><img src="/static/images/Categories.svg" alt="Categories"></a>
     <a href="#" data-button-text="Prices"><img src="/static/images/Prices.svg" alt="PriceComparsion"></a>
-    <a href="#" data-button-text="Cart"><img src="/static/images/Cart.svg" alt="Cart"></a>
+     <a href="/User/view-cart" data-button-text="Cart">
+        <img src="/static/images/Cart.svg" alt="Cart">
+        <span id="cartCount">{{ cart_count }}</span>
+    </a>
 
     <!-- User Profile Section -->
     <div class="user-profile-section" data-button-text="User Profile">
