--- a/PSPCSProject/PSPCS/static/css/product_description.css
+++ b/PSPCSProject/PSPCS/static/css/product_description.css
@@ -1,32 +1,81 @@
 .container {
     display: flex;
 }
-
-.product-image {
-    flex: 1;
+.product-details {
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.product-details {
-    flex: 1;
-    padding: 20px;
+.product-details h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.product-details p {
+    margin-bottom: 10px;
+    color: #666;
+}
+
+.product-details a {
+    color: #007bff;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+#product-price {
+    font-size: 20px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 15px;
+}
+
+.product-details a:hover {
+    color: #0056b3;
+}
+
+.product-details form button {
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.product-details form button:hover {
+    background-color: #218838;
+}
+
+.prev-products {
+    margin-top: 40px;
+    margin-left: 80px;
+}
+
+.prev-products h2 {
+    font-size: 20px;
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .prev-product {
     margin-top: 20px;
-    margin-left: 30px;
     padding: 20px;
     border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-.prev-products h2 {
-    margin-left: 45px;
-}
-@media screen and (max-width: 768px) {
-    .container {
-        flex-direction: column;
-    }
 
-    .product-image,
-    .product-details {
-        width: 100%;
-    }
+.prev-product h3 {
+    font-size: 18px;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+.prev-product p {
+    margin-bottom: 5px;
+    color: #666;
 }
