--- a/PSPCSProject/PSPCS/templates/product_description.html
+++ b/PSPCSProject/PSPCS/templates/product_description.html
@@ -15,9 +15,9 @@
     </div>
     <div class="product-details">
         <h1>Product Name: {{ product.name }}</h1>
-        <p>{{ product.price }}</p>
-        <p>{{ product.description | safe }}</p>
-        <p><a href="{{ product.link }}" target="_blank">Product Link</a></p>
+        <p id="product-price">Product Price: {{ product.price }}</p>
+        <p><b>Description: </b>{{ formatted_description | safe }}</p>
+        <p><a href="{{ product.link }}" target="_blank">{{ product.name }} Buy Link</a></p>
         <form action="{% url 'add_to_cart' product.id %}" method="post">
             {% csrf_token %}
             <button type="submit">Add to Cart</button>
