--- a/PSPCSProject/PSPCS/templates/view_cart.html
+++ b/PSPCSProject/PSPCS/templates/view_cart.html
@@ -11,6 +11,7 @@
             <tr>
                 <th>Product</th>
                 <th>Quantity</th>
+                <th>Action</th> <!-- Add this column for delete action -->
             </tr>
         </thead>
         <tbody>
@@ -18,6 +19,12 @@
             <tr>
                 <td>{{ item.product.name }}</td>
                 <td>{{ item.quantity }}</td>
+                <td>
+                    <form action="{% url 'delete_cart_item' item.id %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit">Delete</button>
+                    </form>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
