--- a/PSPCSProject/PSPCS/templates/navbar.html
+++ b/PSPCSProject/PSPCS/templates/navbar.html
@@ -29,7 +29,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Price Comparison</a>
+                    <a class="nav-link" href="{% url 'price_comparison' %}">Price Comparison</a>
                 </li>
             </ul>
 
@@ -75,7 +75,5 @@
 {% block body %}
 
 {% endblock %}
-
-<script src="{% static 'js/navbar.js' %}"></script>
 </body>
 </html>
