--- a/PSPCSProject/PSPCS/templates/dashboard.html
+++ b/PSPCSProject/PSPCS/templates/dashboard.html
@@ -17,7 +17,19 @@
         <p>Find the best prices for your favorite products across various online stores.</p>
       </div>
       <div class="col-lg-6">
-        <img src="{% static 'images/hero.png' %}" alt="Hero Image" class="img-fluid">
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="{% static 'images/hero.png' %}"  class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'images/hero.png' %}" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div>
       </div>
     </div>
   </div>
