--- a/PSPCSProject/PSPCS/templates/product_description.html
+++ b/PSPCSProject/PSPCS/templates/product_description.html
@@ -9,21 +9,41 @@
     <link href="{% static 'css/product_description.css' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div class="container">
-    <div class="product-image">
-        <img alt="{{ product.name }}" src="{{ product.image.url }}">
-    </div>
+<div class="container" style="margin-left: 5px;"> <!-- Move container right by 5px -->
     <div class="product-details">
-        <h1>Product Name: {{ product.name }}</h1>
-        <p id="product-price">Product Price: {{ product.price }}</p>
-        <p><b>Description: </b>{{ formatted_description | safe }}</p>
-        <p><a href="{{ product.link }}" target="_blank">{{ product.name }} Buy Link</a></p>
-        <form action="{% url 'add_to_cart' product.id %}" method="post">
-            {% csrf_token %}
-            <button type="submit">Add to Cart</button>
-        </form>
+        <div class="product-image">
+            <img alt="{{ product.name }}" src="{{ product.image.url }}">
+        </div>
+        <div class="product-info">
+            <h1>Product Name: {{ product.name }}</h1>
+            <p><b>Description: </b>{{ formatted_description | safe }}</p>
+            <p><a href="{{ product.link }}" target="_blank">{{ product.name }} Buy Link</a></p>
+            <form action="{% url 'add_to_cart' product.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit">Add to Cart</button>
+            </form>
+        </div>
+    </div>
+{% if product.productplatform_set.all %}
+<div class="platforms">
+    <h2>Available Platforms</h2>
+    <div class="platforms-list"> <!-- Add a container for platforms -->
+        {% for platform_product in product.productplatform_set.all %}
+        <div class="platform-product">
+            <div class="platform-image">
+                <img alt="{{ platform_product.platform.name }}" src="{{ platform_product.platform.image.url }}">
+            </div>
+            <div class="platform-details">
+                <h3>{{ platform_product.platform.name }}</h3>
+                <p>Price: {{ platform_product.price }}</p>
+                <p><a href="{{ platform_product.link }}" target="_blank">Buy Now</a></p>
+            </div>
+        </div>
+        {% endfor %}
     </div>
 </div>
+{% endif %}
+
 
 {% if last_viewed_products %}
 <div class="prev-products">
@@ -31,12 +51,12 @@
     {% for prev_product in last_viewed_products %}
     <div class="prev-product">
         <h3>{{ prev_product.name }}</h3>
-        <p>{{ prev_product.price }}</p>
         <!-- Add more details if needed -->
     </div>
     {% endfor %}
 </div>
 {% endif %}
+
 </body>
 </html>
 {% endblock %}
