--- a/PSPCSProject/PSPCS/static/css/product_description.css
+++ b/PSPCSProject/PSPCS/static/css/product_description.css
@@ -73,13 +73,11 @@ body {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-.platforms-list {
-    margin-top: 10px; /* Add space above platforms */
-    /* Additional styling for the platform list container */
-}
+
 .platform-product {
-    width: calc(25% - 20px);
-    margin: 10px;
+    display: inline-block; /* Change to display horizontally */
+    width: auto; /* Remove width calculation */
+    margin: 10px; /* Adjust margin as needed */
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
