--- a/PSPCSProject/PSPCS/templates/dashboard.html
+++ b/PSPCSProject/PSPCS/templates/dashboard.html
@@ -23,10 +23,7 @@
       <img src="{% static 'images/hero.png' %}"  class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'images/hero.png' %}" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="{% static 'images/mobilehero.png' %}" class="d-block w-100" alt="...">
     </div>
   </div>
 </div>
@@ -38,41 +35,32 @@
 <!-- Featured Products Section -->
 <section class="featured-products">
   <div class="container">
-    <h2 class="text-center mb-4">Categories of Products </h2>
+    <h2 class="text-center mb-4">Products </h2>
     <!-- Add featured product cards and ad block here -->
     <div class="row">
 
-      <div class="col-md-6">
-        <!-- Product Card Example 1 (Left) -->
-        <div class="card">
-          <img src="{% static 'images/dress.jpg' %}" class="card-img-top square-img" alt="Clothes Product"style="width: 100%; height: 305px;">
-          <div class="card-body">
-            <h5 class="card-title">Cloth Products</h5>
-            <p class="card-text">Description of Product 1.</p>
-            <a href="#" class="btn btn-primary">View Details</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <!-- Product Card Example 2 (Right) -->
-        <div class="card">
-          <img src="{% static 'images/phones.png' %}" class="card-img-top square-img" alt="Phone Product">
-          <div class="card-body">
-            <h5 class="card-title">Phone Products</h5>
-            <p class="card-text">Description of Product 2.</p>
+<div class="col-md-6">
+    <!-- Product Card Example 2 (Right) -->
+    <div class="card text-center">
+        <img src="{% static 'images/phones.png' %}" class="card-img-top square-img" alt="Phone Product">
+        <div class="card-body">
+            <h5 class="card-title text-center">Phone Products</h5>
+            <p class="card-text text-center">Browse through our collection of phones for the best deals and comparisons.</p>
             <a href="{% url 'products' %}" class="btn btn-primary">View Details</a>
-          </div>
         </div>
-      </div>
+    </div>
+</div>
+
 
       <div class="col-md-12 mt-4">
         <!-- Ad Block at the bottom -->
         <div class="card ad-block bg-light">
           <div class="card-body">
-            <h5 class="card-title">Advertisement</h5>
-            <!-- Add ad content or image here -->
-          </div>
+            <h5 class="card-title ">Advertisement</h5>
+            <a href="https://www.grammarly.com/">
+    <img src="{% static 'images/Advertising.jpg' %}" class="card-img-top square-img" alt="Advertising" style="width: 100%; height: 305px;">
+</a>
+</div>
         </div>
       </div>
     </div>
