--- a/PSPCSProject/PSPCS/templates/productnavbar.html
+++ b/PSPCSProject/PSPCS/templates/productnavbar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,20 +10,10 @@
 <div class="left-section">
     <a href="/dashboard/" data-button-text="Home"><img src="/static/images/Home.svg" alt="Home"></a>
     <a href="/products/" data-button-text="Products"><img src="/static/images/Products.svg" alt="Products"></a>
-    <a href="/categories/" data-button-text="Categories"><img src="/static/images/Categories.svg" alt="Categories"></a>
-    <a href="#" data-button-text="Prices"><img src="/static/images/Prices.svg" alt="PriceComparsion"></a>
-     <a href="/User/view-cart" data-button-text="Cart">
+    <a href="/User/view-cart" data-button-text="Cart">
         <img src="/static/images/Cart.svg" alt="Cart">
         <span id="cartCount">{{ cart_count }}</span>
     </a>
-
-    <!-- User Profile Section -->
-    <div class="user-profile-section" data-button-text="User Profile">
-        <img src="/static/images/user.svg" alt="User Profile" onclick="showUserProfilePopup()">
-    </div>
-
-    <!-- User Profile Popup -->
-    <div id="userProfilePopup" class="user-profile-popup"></div>
 </div>
 </body>
 
